vlib/v/checker/tests/orm_table_attributes.vv
import db.sqlite

@[table]
struct Foo {
	id int @[primary; sql: serial]
}

fn main() {
	db := sqlite.connect(':memory:')!
	sql db {
		create table Foo
	}!
}
